k8s/dvr/overlays/autobrr/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  template:
    metadata:
      labels:
        app.kubernetes.io/name: autobrr
    spec:
      securityContext:
        runAsUser: 911
        runAsGroup: 911
        fsGroup: 911
      containers:
        - name: app
          ports:
            - name: http
              containerPort: 7474
          volumeMounts:
            - name: config
              mountPath: /config
              subPath: autobrr
