k8s/dvr/overlays/autobrr/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - name: http
      port: 7474
      protocol: TCP
      targetPort: http
